[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/shaders/Straw_Sway.tres" type="Material" id=1]
[ext_resource path="res://assets/props/grass/grass_test.png" type="Texture" id=2]
[ext_resource path="res://structures/props/vegetation/SingleStraw.gd" type="Script" id=3]
[ext_resource path="res://assets/music/props/trees/Bush_2.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/music/props/trees/Bush_1.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[node name="SingleStraw" type="Node2D"]
script = ExtResource( 3 )

[node name="SoftCollisions" type="Area2D" parent="."]
position = Vector2( 0, -7 )
collision_layer = 0
collision_mask = 32
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SoftCollisions"]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 1 )
position = Vector2( -8, -15 )
texture = ExtResource( 2 )
centered = false
hframes = 8
vframes = 4

[node name="Bush1" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, -3 )
stream = ExtResource( 5 )
max_distance = 200.0
attenuation = 0.870551

[node name="Bush2" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, -3 )
stream = ExtResource( 4 )
max_distance = 200.0
attenuation = 0.707107

[connection signal="body_entered" from="SoftCollisions" to="." method="_on_Player_body_entered"]
[connection signal="finished" from="Bush1" to="." method="_on_Bush1_finished"]
[connection signal="finished" from="Bush2" to="." method="_on_Bush2_finished"]
